force-app/main/default/objects/Referral_Data__c/Referral_Data__c.object-meta.xml
<CustomObject>
    <label>Referral Data</label>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Referral Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>