force-app/main/default/objects/Referral_Data__c/fields/File_ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>File_ContentDocumentId__c</fullName>
    <description>This field is used to save the files in the referral record</description>
    <label>File ContentDocumentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>