force-app/main/default/objects/Referral_Data__c/fields/Form_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Unique_ID__c</fullName>
    <description>This field is used to get the forms that shared for the patient</description>
    <label>Form Unique ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>