force-app/main/default/objects/Referral_Data__c/fields/Medical_Examination__c.field-meta.xml
<CustomField>
    <fullName>Medical_Examination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to get the vitals and allergy record for the patient</description>
    <label>Medical Examination</label>
    <referenceTo>Medical_Examination__c</referenceTo>
    <relationshipLabel>Referral Data</relationshipLabel>
    <relationshipName>Referral_Data</relationshipName>
    <type>Lookup</type>
</CustomField>