force-app/main/default/objects/Referral_Data__c/fields/Page2__c.field-meta.xml
<CustomField>
    <fullName>Page2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to maintain the  difference between the selected diagnosis code and procedure code in the page 1 and page 2</description>
    <label>Page2</label>
    <type>Checkbox</type>
</CustomField>