force-app/main/default/objects/Referral_Data__c/fields/Patient_Problem__c.field-meta.xml
<CustomField>
    <fullName>Patient_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to get the patient problem that are created for the patient</description>
    <label>Patient Problem</label>
    <referenceTo>Dataset1__c</referenceTo>
    <relationshipLabel>Referral Data</relationshipLabel>
    <relationshipName>Referral_Data</relationshipName>
    <type>Lookup</type>
</CustomField>