force-app/main/default/objects/Referral_Data__c/fields/Prescription_Order__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to attach the medications to it&apos;s parent order</description>
    <label>Prescription Order</label>
    <referenceTo>Prescription_Order__c</referenceTo>
    <relationshipLabel>Referral Data</relationshipLabel>
    <relationshipName>Referral_Data</relationshipName>
    <type>Lookup</type>
</CustomField>