force-app/main/default/objects/Referral_Data__c/fields/Procedure_Codes__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Codes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to get the patient problem that are created for the patient</description>
    <label>Procedure Codes</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Referral Data</relationshipLabel>
    <relationshipName>Referral_Data</relationshipName>
    <type>Lookup</type>
</CustomField>