force-app/main/default/objects/Referral_Data__c/fields/Template_Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Template_Diagnosis_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to attach transaction diagnosis code of patient with it&apos;s template diagnosis of the system using which the diagnosis was created</description>
    <label>Template Diagnosis Code</label>
    <referenceTo>ICD_Codes__c</referenceTo>
    <relationshipLabel>Referral Data</relationshipLabel>
    <relationshipName>Referral_Data</relationshipName>
    <type>Lookup</type>
</CustomField>