force-app/main/default/objects/Referral_Data__c/fields/UA_Sample_Details__c.field-meta.xml
<CustomField>
    <fullName>UA_Sample_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to get the Lab orders that are created for the patient</description>
    <label>UA Sample Details</label>
    <referenceTo>UA_Sample_Details__c</referenceTo>
    <relationshipLabel>Referral Data</relationshipLabel>
    <relationshipName>Referral_Data</relationshipName>
    <type>Lookup</type>
</CustomField>