force-app/main/default/objects/Referral_Data__c/fields/VOB__c.field-meta.xml
<CustomField>
    <fullName>VOB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to get the insurance details for the patient</description>
    <label>VOB</label>
    <referenceTo>VOB__c</referenceTo>
    <relationshipLabel>Referral Data</relationshipLabel>
    <relationshipName>Referral_Data</relationshipName>
    <type>Lookup</type>
</CustomField>